# VinylMusicPlayer

./: .gitignore
.circleci/: merge-feature-branches
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioPlayer.cpp  AudioPlayer.h  player_interface.cpp
app/src/main/java/com/poupa/vinylmusicplayer/discog/: MediaStoreBridge.java
app/src/main/java/com/poupa/vinylmusicplayer/service/: MediaPlayer.java  MediaPlayerFFmpeg.java  MediaPlayerVLC.java  MultiPlayer.java
